Front end login access created

--- a/index.html
+++ b/index.html
@@ -13,5 +13,28 @@
     </head>
     <body>
       <h1>Browser Template</h1>
+      <button type = 'submit' id = "start-game">Start Game</button>
+<!-- <button type = 'submit' id = 'update-game'>Update Game</button> -->
+<button type ='submit' id= "game-index">Games Played</button>
+<form id ="change-password">
+<input type= 'password' name='passwords[old]' placeholder ='Old Password'>
+<input type= 'password' name='passwords[new]' placeholder = 'New Password'>
+  <button type = 'submit'> Change Password</button>
+</form>
+<form id='sign-out'>
+<button type = 'submit'>Sign Out</button>
+</form>
+
+    <form id="sign-up">
+      <input type = 'text' name='credentials[email]' placeholder = 'E-mail'>
+      <input type = 'password' name='credentials[password]' placeholder = 'Password'>
+      <input type =  'password' name='credentials[password_confirmation]'placeholder = 'Confirm Password'>
+      <button type = 'submit'>Sign Up!</button>
+    </form>
+    <form id= "sign-in">
+      <input type = 'text' name = 'credentials[email]' placeholder = 'E-mail'>
+      <input type = 'password' name = 'credentials[password]' placeholder = 'Password'>
+      <button type = 'submit'>Login</button>
+    </form>
     </body>
 </html>
