--- a/index.html
+++ b/index.html
@@ -36,5 +36,13 @@
       <input type = 'password' name = 'credentials[password]' placeholder = 'Password'>
       <button type = 'submit'>Login</button>
     </form>
+    <div class="app-name">Crypto Tracker</div>
+      <div class="nav-buttons">
+        <button id="getCryptoAssets" class="btn btn-info mr-2">Get Assets!</button>
+        <button id="clearCryptoAssets" class="btn btn-outline-info">Clear Assets!</button>
+      </div>
+    <main>
+      <div id="content" class="content"></div>
+    </main>
     </body>
 </html>
