--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1>Browser Template</h1>
-      <button type = 'submit' id = "start-game">Start Game</button>
+      <h1>Crypto Tracker</h1>
+      <button type = 'submit' id = "">Crypto Asset</button>
 <!-- <button type = 'submit' id = 'update-game'>Update Game</button> -->
-<button type ='submit' id= "game-index">Games Played</button>
+<button type ='submit' id= "">Games Played</button>
 <form id ="change-password">
 <input type= 'password' name='passwords[old]' placeholder ='Old Password'>
 <input type= 'password' name='passwords[new]' placeholder = 'New Password'>
