--- a/index.html
+++ b/index.html
@@ -13,22 +13,40 @@
     </head>
 
     <body>
-
     <nav class="navbar">
     <h2 id = 'message'> </h2>
+    <form id ="change-password" id='authenticated'>
+    <input type= 'password' name='passwords[old]' placeholder ='Old Password'>
+    <input type= 'password' name='passwords[new]' placeholder = 'New Password'>
+    <button type = 'submit'> Change Password</button>
+    </form>
+    <button id='sign-out' type = 'submit'>Sign Out</button>
+
+
+
       <h1>
       <img src ='assets/styles/Brave.png' alt= 'bitcoin' width = '60' height="50">Crypto Tracker</h1>
     </nav>
+    <!-- Sign in Modal (About) -->
+              <!-- <div class="modal fade" id="myModalAbout" tabindex="-1" role="dialog">
+                <div class="modal-dialog">
+                  <div class="modal-content" style="background: radial-gradient(circle, rgb(214, 214, 225) 0%, rgb(121, 121, 150) 35%, rgb(19,17,65) 100%);;margin: 0 0;">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal"></button>
+                      <h2 class="modal-title">Welcome to Finance 2.0!</h2>
+                    </div>
+                    <div class="modal-body">
+                      <p>Keep Track of your
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-default" data-dismiss="modal"style="color:white;border:black">Close</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div> -->
 
-<form id ="change-password">
-<input type= 'password' name='passwords[old]' placeholder ='Old Password'>
-<input type= 'password' name='passwords[new]' placeholder = 'New Password'>
-  <button type = 'submit'> Change Password</button>
-</form>
-
-<form id='sign-out'>
-<button type = 'submit'>Sign Out</button>
-</form>
 <!-- sign up  form-->
      <div class = 'auth'>
      <form id="sign-up">
@@ -40,9 +58,9 @@
       </div>
 
 
-      <div class="nav-buttons">
+      <div class="nav-buttons" id='authenticated' >
         <button id="getCryptoAssets" class="">Get Assets!</button>
-        <button id="clearCryptoAssets" class="">Clear Assets!</button>
+        <!-- <button id="clearCryptoAssets" class="">Clear Assets!</button> -->
       </div>
 
 
@@ -54,53 +72,58 @@
     <button type = 'submit'>Sign In!</button>
     </form>
     </div>
-
-  <div class = 'container'>
+<br>
+<br>
+<br>
+  <div class = 'container' id= 'authenticated'>
   <p>Cyptro Asset</p>
-<form id = 'createCrypto'>
+<form id = 'createCrypto' name=crypto[crypto]>
   <div class='col-4 box'>
-  <input  type = 'text' placeholder = 'Asset'>
+  <input  type = 'text' placeholder = 'Asset' name='crypto[asset]'>
 </div>
 <div class='col-4 box'>
-  <input  type = 'text' placeholder = 'Amount'>
+  <input  type = 'number' placeholder = 'Amount' name='crypto[amount]'>
 </div>
 <div class='col-4 box'>
-  <input  type = 'text' placeholder = 'Exchange'>
+  <input  type = 'text' placeholder = 'Exchange' name='crypto[exchange]'>
 </div>
-  <button type = 'submit'>Add Asset!</button>
+  <button type = 'submit'>Add Asset!</button> </br>
 </form>
 </div>
 
 
-<!-- Button to get index -->
-        <section>
-          <div class="column">
-           <button id="cryptoIndex">All Assets</button>
-           <div id="content" class="content"></div>
-         </div>
-       </section>
+<!-- secection for handlebars to get index -->
+<section>
+  <div class="column">
+    <button id="getCryptoIndex">All Assets</button>
+   <div id="content" class="content" data-id="{{crypto._id}}"></div>
+ </div>
+</section>
 
 
 
 
 <!-- Form for Update -->
 <div>
-  <form id="updateCryptoAsset">
+  <form class="updateCryptoAsset">
     <div>
-    <input  type = 'text' placeholder = 'ID'>
+    <input  type = 'text' placeholder = 'ID' name='crypto[id]'>
   </div>
+  <br>
     <div>
-    <input  type = 'text' placeholder = 'Asset'>
+    <input  type = 'text' placeholder = 'Asset' name='crypto[asset]'>
   </div>
+  <br>
   <div>
-    <input  type = 'text' placeholder = 'Amount'>
+    <input  type = 'number' placeholder = 'Amount' name='crypto[amount]'>
   </div>
+  <br>
   <div>
-    <input  type = 'text' placeholder = 'Exchange'>
+    <input  type = 'text' placeholder = 'Exchange' name='crypto[exchange]'>
   </div>
     <button type = 'submit'>Update Asset!</button>
   </form>
 </div>
 
-</body>
+    </body>
 </html>
