--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
-
     <body>
-      <button type = 'submit' id = "">Crypto Asset</button>
-
+<div id = message> </div>
 <form id ="change-password">
 <input type= 'password' name='passwords[old]' placeholder ='Old Password'>
 <input type= 'password' name='passwords[new]' placeholder = 'New Password'>
@@ -29,6 +27,24 @@
       <h1>
       <img src ='assets/styles/Brave.png' alt= 'bitcoin' width = '60' height="50">Crypto Tracker</h1>
     </nav>
+
+
+    <div class="container">
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="portfolio">
+                  <div class="nav-buttons" id='authenticated' >
+                  <nav>
+                    <button id="getCryptoIndex">Get assets</button>
+                      <p id="portfolio-message"></p>
+                      <h3 id="portfolio">All Assets:</h3>
+                    <div id="content" class="content"></div>
+                  </nav>
+                </div>
+                </div>
+              </div>
+            </div>
+          </div>
     <!-- Sign in Modal (About) -->
               <!-- <div class="modal fade" id="myModalAbout" tabindex="-1" role="dialog">
                 <div class="modal-dialog">
@@ -61,17 +77,9 @@
     <div class="app-name">Crypto Tracker</div>
       <div class="nav-buttons">
       </div>
-    <main>
-      <div id="content" class="content"></div>
-    </main>
-      </form>
-      </div>
+    </div>
 
-
-      <div class="nav-buttons" id='authenticated' >
-        <button id="getCryptoAssets" class="">Get Assets!</button>
-        <!-- <button id="clearCryptoAssets" class="">Clear Assets!</button> -->
-      </div>
+        <!-- <button id="clearCryptoAssets" class="">Clear Assets!</button> --
 
 
 <!-- Signin Form -->
@@ -103,12 +111,12 @@
 
 
 <!-- secection for handlebars to get index -->
-<section>
+<!-- <section>
   <div class="column">
     <button id="getCryptoIndex">All Assets</button>
    <div id="content" class="content" data-id="{{crypto._id}}"></div>
  </div>
-</section>
+</section> -->
 
 
 
